# pdf_cleaner

./: .editorconfig  CMakeLists.txt  README.md
src/: CMakeLists.txt  main.cpp
src/pdf/: Common.hpp  DocumentProperty.cpp  DocumentProperty.hpp  FileHandler.cpp  FileHandler.hpp  Inspector.cpp  Inspector.hpp  Keyword.cpp  Keyword.hpp
